# quokkadb

./: Cargo.toml  README.md
benches/: trie_bench.rs
src/: collection.rs  error.rs  lib.rs  statistics.rs  storage.rs  util.rs
src/io/: bitset.rs  buffer.rs  byte_reader.rs  byte_writer.rs  checksum.rs  compressor.rs  fd_cache.rs  mod.rs  serializable.rs  varint.rs
src/obs/: logger.rs  metrics.rs  mod.rs
src/options/: mod.rs  options.rs  storage_quantity.rs
src/query/: executor.rs  expr_fn.rs  logical_expr_fn.rs  logical_plan.rs  mod.rs  normalization_rules.rs  optimizer.rs  parser.rs  physical_plan.rs  tree_node.rs  update.rs  update_fn.rs
src/query/execution/: executor.rs  filters.rs  mod.rs  projections.rs  sort.rs  sorts.rs  updates.rs
src/query/logical/: executor.rs  expr_fn.rs  logical_plan.rs  mod.rs  parser.rs  physical_plan.rs
src/query/optimizer/: mod.rs  normalization_rules.rs  optimizer.rs
src/storage/: append_log.rs  block_builder.rs  callback.rs  catalog.rs  compound_key.rs  files.rs  flush_manager.rs  flush_scheduler.rs  internal_key.rs  iterators.rs  log.rs  lsm_tree.rs  lsm_version.rs  manifest.rs  manifest_state.rs  memtable.rs  mod.rs  operation.rs  sstable_properties.rs  sstable_writer.rs  storage_engine.rs  test_utils.rs  trie.rs  wal.rs  write_ahead_log.rs  write_batch.rs  writes_manager.rs
src/storage/sstable/: block_builder.rs  block_cache.rs  (+7 more)
src/util/: bloom_filter.rs  bson_utils.rs  compressor.rs  interval.rs  mod.rs  murmur_hash64.rs  varint.rs
tests/: collection_management.rs  insert.rs  queries.rs  restart.rs  updates.rs
