[package]
name = "quokkadb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1"
bson = "2.13.0"
snap = "1.1"
lz4 = "1.24"
moka = { version = "0.12", features = ["sync"] }
arc-swap = "1.7.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
crossbeam-epoch = "0.9.18"

[dev-dependencies]
tempfile = "3.19.1"
criterion = "0.5"
rand = "0.9.0"

[[bench]]
name = "trie_bench"
harness = false

[profile.bench]
debug = true