[package]
name = "quokkadb"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1"
bson = "2.14.0"
snap = "1.1"
lz4 = "1.28.1"
moka = { version = "0.12", features = ["sync"] }
arc-swap = "1.7.1"
smallvec = "1.11"

[dev-dependencies]
tempfile = "3.19.1"
criterion = "0.5"
rand = "0.9.0"
pprof = { version = "0.14.0", features = ["flamegraph"] }

[[bench]]
name = "trie_bench"
harness = false

[profile.bench]
debug = true