[package]
name = "quokkadb"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.19.1"
serde = { version = "1.0", features = ["derive"] }
crc32fast = "1.4.2"
crossbeam-skiplist = "0.1"
bson = "2.14.0"
snap = "1.1"
lz4 = "1.28.1"
moka = { version = "0.12", features = ["sync"] }
arc-swap = "1.7.1"

[dev-dependencies]